--- a/NHtmlUnit.nuspec
+++ b/NHtmlUnit.nuspec
@@ -6,15 +6,15 @@
     <title>NHtmlUnit</title>
     <authors>OKB AS</authors>
     <owners>OKB AS</owners>
-    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
+	<license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/HtmlUnit/NHtmlUnit</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NHtmlUnit is a .NET wrapper of HtmlUnit; a "GUI-less browser for Java programs". It allows you to write code to test web applications with a headless, automated browser.</description>
-    <releaseNotes>Updated to version 7.4.5196 of IKVM.</releaseNotes>
+    <releaseNotes>Updated to HtmlUnit 2.50</releaseNotes>
     <copyright>Copyright © OKB AS 2021</copyright>
     <tags>testing htmlunit nhtmlunit headless browser</tags>
     <dependencies>
-        <dependency id="IKVM" version="7.4.5196.0" />
+		<dependency id="IKVM" version="8.1.5717" />
     </dependencies>
     <frameworkAssemblies />
     <references />
