--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
-
-    - name: Setup NuGet.exe
-      uses: NuGet/setup-nuget@v1.0.5
+    - uses: microsoft/setup-msbuild@v1
+    - uses: NuGet/setup-nuget@v1.0.5
 
     - name: Restore NuGet packages
       run: nuget restore NHtmlUnit.sln
@@ -42,6 +39,22 @@ jobs:
     - name: Create NuGet Package
       run: nuget.exe pack NHtmlUnit.nuspec -Verbosity detailed -Symbols -Properties Configuration=Release -Version ${{ steps.gitversion.outputs.nuGetVersion }}
 
+    - uses: actions/upload-artifact@v2
+      with:
+        name: NHtmlUnit.nupkg
+        path: '*.nupkg'
+
+  publish:
+    runs-on: windows-latest
+    needs: build
+
+    steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: NHtmlUnit.nupkg
+
+    - uses: NuGet/setup-nuget@v1.0.5
+
     - name: Publish To NuGet.org
-      if: startsWith(github.ref, 'refs/tags/') # Only publish tagged commits
+      # if: startsWith(github.ref, 'refs/tags/') # Only publish tagged commits
       run: nuget push *.nupkg -Source nuget.org -ApiKey ${{ secrets.NUGET_API_KEY }}
