--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,12 @@ jobs:
       with:
         name: NHtmlUnit.nupkg
 
+    - name: Upload .nupkg to release
+      uses: meeDamian/github-release@2.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        files: '*.nupgk'
+
     - uses: NuGet/setup-nuget@v1.0.5
 
     - name: Publish To NuGet.org
