--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         path: '*.nupkg'
 
   publish:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
