--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build
+    if: startsWith(github.ref, 'refs/tags/') # Only publish tagged commits
 
     steps:
     - uses: actions/download-artifact@v2
@@ -72,5 +73,4 @@ jobs:
     - uses: NuGet/setup-nuget@v1.0.5
 
     - name: Publish To NuGet.org
-      # if: startsWith(github.ref, 'refs/tags/') # Only publish tagged commits
       run: nuget push *.nupkg -Source nuget.org -ApiKey ${{ secrets.NUGET_API_KEY }}
